--- a/public/css/articles.css
+++ b/public/css/articles.css
@@ -70,7 +70,7 @@
 
 .article-icon img {
   width: 30px;
-  height: 30px !important;
+  height: 30px;
   display: block;
   position: relative;
   margin-top: -3px;
