fix(article): 更新 scss 导入路径为直接路径，解决 vite "Can't find stylesheet to import"

--- a/events/admin/list.scss
+++ b/events/admin/list.scss
@@ -1,6 +1,6 @@
-@import "~bootstrap-mobile/scss/variables";
-@import "~bootstrap-mobile/scss/mixins/hairline";
-@import "~bootstrap-mobile/scss/list";
+@import "bootstrap-mobile/scss/variables";
+@import "bootstrap-mobile/scss/mixins/hairline";
+@import "bootstrap-mobile/scss/list";
 
 /* 调整和前台字体匹配 */
 
